# cpp_mentoring_task2

./: .gitignore  CMakeLists.txt  Makefile  README.md  b.py  cvnotify.cpp  cvwait.cpp  main.cpp  nm.cpp  old.cpp  r.cpp  rw.cpp  rw.h  w.cpp
.github/workflows/: cmake.yml
